# Aether

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.app  Dockerfile.app.local  Dockerfile.app.release-local  README.md  docker-compose.release-local.yml  docker-compose.single-node.yml  docker-compose.yml  install.sh
.github/workflows/: release.yml
.trellis/: .template-hashes.json  .version  config.yaml
.trellis/scripts/: gen_spec_tasks.py  launch_codex_agents.sh
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/01-spec-aether-crypto/: prd.md
.trellis/tasks/02-spec-aether-wallet/: prd.md
.trellis/tasks/03-spec-aether-cache/: prd.md
.trellis/tasks/04-spec-aether-http/: prd.md
.trellis/tasks/05-10-live-python-export-rust-import-model-test/: prd.md  task.json
.trellis/tasks/05-12-grok2api-provider-pool-integration/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-13-grok-account-import-dialog-alignment/: prd.md  task.json
apps/aether-gateway/: Cargo.toml
apps/aether-gateway/src/: lib.rs  (+2 more)
apps/aether-proxy/: Cargo.toml  README.md
apps/aether-tunnel/: README.md
crates/aether-dispatch-core/: Cargo.toml
crates/aether-dispatch-core/src/: candidate.rs  effects.rs  lib.rs  pool.rs  sequence.rs
crates/aether-testkit/: Cargo.toml
docs/architecture/: gemini-api-endpoint-routing.md
docs/development/: simple-query-inventory.md
frontend/: package.json
scripts/: migrate-compose-data-layout.sh  migrate-pg-compose-to-single-node.sh
(+492 files in other folders)
