[package]
name = "aether-dispatch-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Request-scoped dispatch sequence and pool cursor primitives for Aether"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
